--- a/enroll.html
+++ b/enroll.html
@@ -1,63 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subjects Enrolled - Pubali EduHub</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f0fdfa;
-        }
-        .scrollbar-custom {
-            scrollbar-width: thin;
-            scrollbar-color: #4fd1c5 #f0fdfa;
-        }
-        .scrollbar-custom::-webkit-scrollbar {
-            width: 8px;
-        }
-        .scrollbar-custom::-webkit-scrollbar-track {
-            background: #f0fdfa;
-            border-radius: 10px;
-        }
-        .scrollbar-custom::-webkit-scrollbar-thumb {
-            background: #4fd1c5;
-            border-radius: 10px;
-        }
-        .scrollbar-custom::-webkit-scrollbar-thumb:hover {
-            background: #38b2ac;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Subjects Enrolled - Pubali EduHub</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Lucide Icons -->
+  <script src="https://unpkg.com/lucide@latest"></script>
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f0fdfa;
+    }
+  </style>
 </head>
 <body class="bg-[#f0fdfa] min-h-screen flex flex-col items-center p-8">
-    <h1 class="text-4xl font-bold text-gray-900 mb-6">Subjects Enrolled</h1>
-    <div id="enrolled-courses" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 w-full max-w-5xl"></div>
-    <a href="home.html" class="mt-8 text-[#14b8a6] font-semibold hover:underline">Back to Dashboard</a>
-    <script src="data.js"></script>
-    <script>
-        function sanitizeInput(input) {
-            const div = document.createElement('div');
-            div.textContent = input;
-            return div.innerHTML;
-        }
 
-        const enrolledCourses = document.getElementById('enrolled-courses');
-        if (enrolledCourses) {
-            if (!localStorage.getItem('isLoggedIn')) {
-                window.location.href = 'login.html';
-                return;
-            }
-            enrolledCourses.innerHTML = courses.map(course => `
-                <div class="bg-white p-6 rounded-2xl shadow-lg text-center">
-                    <h2 class="text-xl font-semibold text-gray-900">${sanitizeInput(course.title)}</h2>
-                    <p class="text-gray-600 text-sm mt-2">${sanitizeInput(course.description)}</p>
-                </div>
-            `).join('');
-        }
-    </script>
+  <!-- Page Title -->
+  <h1 class="text-4xl font-bold text-gray-900 mb-8">📚 Subjects Enrolled</h1>
+
+  <!-- Courses Container -->
+  <div id="enrolled-courses" 
+       class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 w-full max-w-6xl">
+  </div>
+
+  <!-- Back to Dashboard -->
+  <a href="home.html" 
+     class="mt-10 px-6 py-3 rounded-xl bg-[#14b8a6] text-white font-semibold shadow-md hover:bg-[#0f766e] transition">
+     ⬅ Back to Dashboard
+  </a>
+
+  <!-- Modal -->
+  <div id="course-modal" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+    <div class="bg-white rounded-2xl shadow-2xl max-w-lg w-full p-6 relative">
+      <button id="close-modal" class="absolute top-3 right-3 text-gray-600 hover:text-red-500 text-xl font-bold">&times;</button>
+      <h2 id="modal-title" class="text-2xl font-bold text-gray-900"></h2>
+      <p id="modal-description" class="text-gray-600 mt-3"></p>
+    </div>
+  </div>
+
+  <script>
+    // ✅ Example courses with icons
+    const courses = [
+      {
+        title: "Programming in Python",
+        description: "Learn Python basics, OOP, and real-world projects.",
+        details: "This course covers Python syntax, data structures, file handling, OOP, libraries like Pandas & NumPy, and mini projects.",
+        icon: "code"
+      },
+      {
+        title: "Web Development",
+        description: "HTML, CSS, JavaScript, and modern frameworks.",
+        details: "Dive into responsive design, Tailwind CSS, React.js, backend integration, and building full-stack applications.",
+        icon: "globe"
+      },
+      {
+        title: "Database Management",
+        description: "SQL, normalization, and database design concepts.",
+        details: "Covers MySQL, PostgreSQL, ER diagrams, transactions, indexing, and advanced queries.",
+        icon: "database"
+      },
+      {
+        title: "Operating Systems",
+        description: "Processes, threads, memory management, and scheduling.",
+        details: "Understand OS concepts like scheduling algorithms, deadlocks, virtual memory, and file systems.",
+        icon: "settings"
+      },
+      {
+        title: "Computer Networks",
+        description: "Understand TCP/IP, routing, and modern network protocols.",
+        details: "Learn OSI model, IP addressing, subnetting, switching, routing, and network security.",
+        icon: "wifi"
+      }
+    ];
+
+    function sanitizeInput(input) {
+      const div = document.createElement('div');
+      div.textContent = input;
+      return div.innerHTML;
+    }
+
+    const enrolledCourses = document.getElementById('enrolled-courses');
+    const modal = document.getElementById('course-modal');
+    const modalTitle = document.getElementById('modal-title');
+    const modalDescription = document.getElementById('modal-description');
+    const closeModal = document.getElementById('close-modal');
+
+    // Render courses
+    if (enrolledCourses) {
+      enrolledCourses.innerHTML = courses.map((course, index) => `
+        <div class="bg-white rounded-2xl shadow-lg p-6 hover:shadow-2xl hover:scale-105 transition transform duration-300">
+          <div class="h-32 w-32 mx-auto rounded-full bg-gradient-to-r from-[#14b8a6] to-[#06b6d4] flex items-center justify-center mb-4">
+            <i data-lucide="${course.icon}" class="text-white w-14 h-14"></i>
+          </div>
+          <h2 class="text-xl font-semibold text-gray-900 text-center">${sanitizeInput(course.title)}</h2>
+          <p class="text-gray-600 text-sm mt-2 text-center">${sanitizeInput(course.description)}</p>
+          <div class="flex justify-center">
+            <!-- 🌈 Gradient View Details button -->
+            <button onclick="showDetails(${index})" 
+                    class="mt-4 px-5 py-2 rounded-lg font-medium text-white bg-gradient-to-r from-[#14b8a6] to-[#3b82f6] hover:from-[#0f766e] hover:to-[#1e40af] transition">
+              View Details
+            </button>
+          </div>
+        </div>
+      `).join('');
+
+      // Load icons
+      lucide.createIcons();
+    }
+
+    // Show modal with details
+    function showDetails(index) {
+      const course = courses[index];
+      modalTitle.textContent = course.title;
+      modalDescription.textContent = course.details;
+      modal.classList.remove('hidden');
+    }
+
+    // Close modal
+    closeModal.addEventListener('click', () => {
+      modal.classList.add('hidden');
+    });
+
+    window.addEventListener('click', (e) => {
+      if (e.target === modal) {
+        modal.classList.add('hidden');
+      }
+    });
+  </script>
+
 </body>
 </html>
